crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__and_or-2.snap
---
source: crates/cranexpr-parser/src/lib.rs
assertion_line: 422
expression: "parse_expr(\"x 0 > y 0 > or\").unwrap()"
---
- Binary:
    - Or
    - Binary:
        - Gt
        - Ident: x
        - Lit: 0
    - Binary:
        - Gt
        - Ident: y
        - Lit: 0
