crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__and_or.snap
---
source: crates/cranexpr-parser/src/lib.rs
assertion_line: 421
expression: "parse_expr(\"x 0 > y 0 > and\").unwrap()"
---
- Binary:
    - And
    - Binary:
        - Gt
        - Ident: x
        - Lit: 0
    - Binary:
        - Gt
        - Ident: y
        - Lit: 0
