crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__atan2.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"y x atan2\").unwrap()"
---
- Binary:
    - Atan2
    - Ident: y
    - Ident: x
