crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__clip.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x 16 235 clip\").unwrap()"
---
- Ternary:
    - Clip
    - Ident: x
    - Lit: 16
    - Lit: 235
