crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__dup-2.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x x y - dup 1.0 * dup1 0.0 * ? -\").unwrap()"
---
- Binary:
    - Sub
    - Ident: x
    - IfElse:
        - Binary:
            - Sub
            - Ident: x
            - Ident: y
        - Binary:
            - Mul
            - Binary:
                - Sub
                - Ident: x
                - Ident: y
            - Lit: 1
        - Binary:
            - Mul
            - Binary:
                - Sub
                - Ident: x
                - Ident: y
            - Lit: 0
