crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__dup.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x dup *\").unwrap()"
---
- Binary:
    - Mul
    - Ident: x
    - Ident: x
