crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__eq_op.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x y =\").unwrap()"
---
- Binary:
    - Eq
    - Ident: x
    - Ident: y
