crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__exponent.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x 1e-06 + y.PlaneStatsAverage *\").unwrap()"
---
- Binary:
    - Mul
    - Binary:
        - Add
        - Ident: x
        - Lit: 0.000001
    - Prop:
        - y
        - PlaneStatsAverage
