crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__gte_op.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x y >=\").unwrap()"
---
- Binary:
    - Gte
    - Ident: x
    - Ident: y
