crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__literals.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"1234\").unwrap()"
---
- Lit: 1234
