crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__lte_op.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x y <=\").unwrap()"
---
- Binary:
    - Lte
    - Ident: x
    - Ident: y
